@@ -83,6 +83,8 @@ int v5_creds_check_initialized_pwc(krb5_context ctx, krb5_creds *creds);
 int v5_creds_get_etype(krb5_creds *creds);
 void v5_creds_set_etype(krb5_context ctx, krb5_creds *creds, int etype);
 krb5_keyblock *v5_creds_get_key(krb5_creds *creds);
+int v5_enctype_to_string(krb5_context ctx, krb5_enctype enctype,
+			 char *buf, size_t length);
 
 krb5_principal v5_ticket_get_client(krb5_ticket *ticket);
 krb5_error_code v5_auth_con_setuserkey(krb5_context ctx,
